# kleocam

./: .gitignore  Dockerfile  Dockerfile-local  Dockerfile-pi  README.md  docker-compose-local.yml  docker-compose-pi.yml  docker-compose.yml  pyproject.toml  test.sh  tox.ini
.github/workflows/: test-api.yml
kleocam/: main.py  recorder.py  utils.py
kleocam/api/: camera_api.py
kleocam/models/: camera.py
tests/: test_api.py
