[tool.poetry]
name = "kleocam"
version = "0.0.1"
description = ""
authors = ["Tord Kriznik Sørensen <tordks@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
loguru = "^0.5.3"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
