[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Tord Kriznik Sørensen <tordks@hotmail.com>"]
description = ""
name = "kleocam"
version = "0.0.2"

[tool.poetry.dependencies]
fastapi = "^0.75.2"
loguru = "^0.6.0"
python = "^3.9"
redis = "^4.1.4"
uvicorn = "^0.17.6"

# TODO: add picamera dependency. Add it as an extra dependency that does not
# need to be installed when not on rpi

[tool.poetry.dev-dependencies]
pytest = "^7.1"
tox = "^3.25.0"
requests = "^2.27.1"
